--- a/html/cart.html
+++ b/html/cart.html
@@ -20,11 +20,12 @@
                     <div class="bg"></div><a href="catalog.html">Каталог</a>
                 </div>
                 <div class="container">
-                    <div class="bg"></div><a href="cart.html">Кошик</a>
+                    <div class="bg"></div><a href="cart.html" style="text-decoration: underline;">Кошик</a>
                 </div>
             </div>
             <div class="darken"></div>
         </header>
+        <div class="back"></div>
         <script>
             // Перевірка сесії для зміни кнопок у dropdown
             fetch('/session-status')
