--- a/html/main.html
+++ b/html/main.html
@@ -14,7 +14,7 @@
                     </div>
                 </div>
                 <div class="container">
-                    <div class="bg"></div><a href="main.html">На головну</a>
+                    <div class="bg"></div><a href="main.html" style="text-decoration: underline;">На головну</a>
                 </div>
                 <div class="container">
                     <div class="bg"></div><a href="catalog.html">Каталог</a>
@@ -47,5 +47,8 @@
                         }
                     });
         </script>
+        <div style="height: 100%">
+            <embed src="https://espreso.tv/medycyna" style="width:100%; height: 100%">
+        </div>
     </body>
 </html>
