--- a/html/catalog.html
+++ b/html/catalog.html
@@ -71,6 +71,9 @@
                                     <p>Ціна: ${product.price}грн.</p>
                                     <p>Кількість у наявності: ${product.quantity_in_stock}</p>
                                     <p>Айді категорії: ${product.category_id}</p>
+                                    <label for="quantity-${product.product_id}">Кількість:</label>
+                                    <input type="number" id="quantity-${product.product_id}" min="1" max="${product.quantity_in_stock}" value="1">
+                                    <button onclick="addToCart(${product.product_id})">Додати до кошика</button>
                                 </div>
                             </div>
                         `;
@@ -82,6 +85,49 @@
                 .catch(error => {
                     console.error('Error fetching products:', error);
                 });
+
+            // Функція для додавання товару до кошика
+            // Функція для додавання товару до кошика
+function addToCart(productId) {
+    // Перевіряємо, чи є користувач увійшов
+    fetch('/session-status')
+        .then(response => response.json())
+        .then(data => {
+            if (!data.isLoggedIn) {
+                alert('Будь ласка, увійдіть в акаунт перед тим, як додавати товари до кошика');
+                window.location.href = '/ent.html'; // Перенаправляємо на сторінку входу
+                return;
+            }
+
+            const quantity = document.getElementById(`quantity-${productId}`).value;
+
+            fetch('/api/add-to-cart', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify({
+                    product_id: productId,
+                    quantity: quantity
+                })
+            })
+            .then(response => response.json())
+            .then(data => {
+                if (data.success) {
+                    alert('Товар додано до кошика');
+                } else {
+                    alert('Сталася помилка при додаванні товару');
+                }
+            })
+            .catch(error => {
+                console.error('Error adding product to cart:', error);
+            });
+        })
+        .catch(error => {
+            console.error('Error checking session status:', error);
+        });
+}
+
         </script>
     </body>
 </html>
