--- a/html/account.html
+++ b/html/account.html
@@ -33,6 +33,7 @@
             <div class="darken"></div>
         </header>
         <div class="back">
+            <div class="usercont">
             <!-- Блок для виведення даних користувача -->
             <div class="user" id="user-info"></div>
             <!-- Форма для оновлення даних користувача -->
@@ -43,7 +44,7 @@
                 <input type="text" id="address" name="address">
                 <button type="submit">Оновити</button>
             </form>
-
+            </div>
             <script>
                 let currentPhoneNumber = '';
                 let currentAddress = '';
