--- a/html/ent.html
+++ b/html/ent.html
@@ -20,7 +20,7 @@
                     <div class="bg"></div><a href="catalog.html">Каталог</a>
                 </div>
                 <div class="container">
-                    <div class="bg"></div><a href="cart.html">Кошик</a>
+                    <div id="cempt"  class="bg"></div><a id="cart" href="cart.html">Кошик</a>
                 </div>
             </div>
             <div class="darken"></div>
@@ -44,6 +44,8 @@
                            loginBtn.style.display = 'block';
                            accountBtn.style.display = 'none';
                            logoutBtn.style.display = 'none';
+                           cart.style.display = "none";
+                           cempt.style.opacity = 1;
                        }
                    });
        </script>
