--- a/html/catalog.html
+++ b/html/catalog.html
@@ -20,7 +20,7 @@
                     <div class="bg"></div><a href="catalog.html" style="text-decoration: underline;">Каталог</a>
                 </div>
                 <div class="container">
-                    <div class="bg"></div><a href="cart.html">Кошик</a>
+                    <div id="cempt"  class="bg"></div><a id="cart" href="cart.html">Кошик</a>
                 </div>
             </div>
             <div class="darken"></div>
@@ -48,6 +48,9 @@
                            loginBtn.style.display = 'block';
                            accountBtn.style.display = 'none';
                            logoutBtn.style.display = 'none';
+                           cart.style.display = "none";
+                           cempt.style.opacity = 1;
+                           hide.style.display = "none";
                        }
                    });
             // Fetch products from the server
