--- a/html/reg.html
+++ b/html/reg.html
@@ -27,6 +27,7 @@
         </header>
 
         <div class="ent">
+            <div class="entmen">
             <h1>Регистрація</h1>
 
             <script>
@@ -104,5 +105,6 @@
             </form>
             <p>Вже є акаунт?</p> <a href="ent.html">Увійти</a>
         </div>
+    </div>  
     </body>
 </html>
